# gartner_20260414

./: .gitignore  Makefile  additional_llm_system_instructions.md  additional_llm_system_instructions_2.md  additional_llm_system_instructions_20260417.md  agent_responses.toml  demo_script.md  generate_loan_pdfs.py  generation_log.md  generation_summary.csv  loan_processing_report.html  pyproject.toml  script.md  simulated_emails.html
chat_integration/: appscript.js  appscript.json  appscript_agent.js  appscript_hardcoded.js  fix_permissions.sh  spec.md
chat_integration/app/: main.py  requirements.txt
loan_supervisor/: .gitignore  Makefile  README.md  deployment_metadata.json  pyproject.toml  spec.md
loan_supervisor/app/: agent.py  agent_direct_tools_backup.py  prompt.md  prompt_direct_tools_backup.md  responses.toml
loan_supervisor/app/agents/credit_checker/: agent.py  prompt copy.md  prompt.md
loan_supervisor/app/agents/document_retriever/: agent.py  prompt copy.md  prompt.md
loan_supervisor/app/agents/document_validator/: agent.py  prompt copy.md  prompt.md
loan_supervisor/app/agents/risk_assessor/: agent.py  prompt copy.md  (+1 more)
loan_supervisor/app/app_utils/: helpers.py  telemetry.py  typing.py
loan_supervisor/app/shared/: callbacks.py  model.py
production_docs/: additional_llm_system_instructions.md
supporting_docs/: generate_report.py  generation_log.md  generation_summary.csv  loan_processing_report.md  pending_applications.md
test_gemini3/test-gemini3/: README.md  deployment_metadata.json  pyproject.toml
test_gemini3/test-gemini3/app/: agent.py
(+5 files in other folders)
