[project]
name = "gartner-loan-processing"
version = "0.1.0"
description = "Synthetic loan data generation for Gartner demo"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.5.1",
    "playwright>=1.58.0",
    "google-cloud-storage>=3.9.0",
    "pyOpenSSL",
    "google-adk>=1.15.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.130.0",
    "google-genai>=0.1.1",
    "a2a-sdk>=0.3.26",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.agents-cli]
name = "gartner-loan-processing"
description = "Synthetic loan data generation and supervisor agents for Gartner demo"
base_template = "adk"
agent_directory = "agent"

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"
session_type = "none"
cicd_runner = "skip"
include_data_ingestion = false
datastore = "none"

